--- a/list.html
+++ b/list.html
@@ -589,6 +589,7 @@
 			<p><a href="s12692.html">Krzysztof Kierski</a></p>
 			<p><a href="s13814.html">Michał Skotnicki</a></p>
 			<p><a href="s19910.html">Andrzej Korzhov</a></p>
+<p><a href="s16401.html">Taras Melnychuk</a></p>
 </body>
 
 </html>
